--- a/templates/index.html
+++ b/templates/index.html
@@ -50,10 +50,10 @@
   <!-- Bouton thème -->
   <button id="toggleThemeBtn" class="mode-toggle">🌗</button>
 
-  <!-- Titre + onglets -->
+  <!-- Titre + onglets
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h1 class="h4">📺 Vodum</h1>
-  </div>
+  </div> -->
 
   <ul class="nav nav-tabs">
     <li class="nav-item">
