--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <title>VODUM</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="icon" type="image/png" href="{{ url_for('static', filename='vodum_icon.png') }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='icon.png') }}">
+	<link rel="icon" type="image/png" sizes="96x96" href="{{ url_for('static', filename='icon.png') }}">
+	<link rel="icon" type="image/png" sizes="192x192" href="{{ url_for('static', filename='icon.png') }}">
+
   <style>
     body.light-mode {
       background-color: #f8f9fa;
