--- a/templates/servers.html
+++ b/templates/servers.html
@@ -61,16 +61,16 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content bg-dark text-light">
       <div class="modal-header">
-        <h5 class="modal-title">Offrir du temps</h5>
+        <h5 class="modal-title">Offrir du temps a tout les utilisateurs</h5>
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Fermer"></button>
       </div>
       <div class="modal-body">
         <p id="giftServerName"></p>
         <div class="d-flex justify-content-around">
           <!-- ⛔️ plus de onclick inline -->
-          <button id="giftPlus1"  class="btn btn-outline-light">+1j</button>
-          <button id="giftPlus7"  class="btn btn-outline-light">+7j</button>
-          <button id="giftPlus30" class="btn btn-outline-light">+1m</button>
+          <button id="giftPlus1"  class="btn btn-outline-light">+1 jour</button>
+          <button id="giftPlus7"  class="btn btn-outline-light">+7 jours</button>
+          <button id="giftPlus30" class="btn btn-outline-light">+1 mois</button>
         </div>
       </div>
     </div>
